--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@ section {
 }
 
 .sectionTitle {
-	@apply text-3xl sm:text-4xl font-bold text-brand-100 !leading-6;
+	@apply text-3xl sm:text-4xl font-bold !leading-6;
 }
 
 .sectionSubTitle {
