--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,15 +20,15 @@ section {
 }
 
 .sectionSubTitle {
-	@apply font-bold text-brand-300
+	@apply font-bold text-faiz-300;
 }
 
 .faqAnswer a{
-	@apply font-semibold underline
+	@apply font-semibold underline;
 }
 
 p {
-	@apply text-brand-100
+	@apply text-faiz-100;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -43,18 +43,3 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
-.blog_content h2{
-	@apply text-lg md:text-xl font-bold !leading-none text-brand-100 my-3
-}
-
-.blog_content p, .blog_content ul{
-	@apply py-1
-}
-
-.blog_content{
-	@apply text-brand-300 leading-relaxed tracking-wide
-}
-
-.blog_content a{
-	@apply underline hover:text-brand-100 transition duration-300 font-semibold
-}
